[package]
name = "substrate-trie"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Patricia trie stuff using a parity-codec node format"
repository = "https://github.com/paritytech/parity-common"
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
codec = { package = "parity-codec", version = "4.1.1", default-features = false }
rstd = { package = "sr-std", path = "../sr-std", default-features = false }
hash-db = { version = "0.14.0", default-features = false }
trie-db = { version = "0.14.0", default-features = false }
trie-root = { version = "0.14.0", default-features = false }
memory-db = { version = "0.14.0", default-features = false }
substrate-primitives = { path = "../primitives", default-features = false }

[dev-dependencies]
trie-bench = { version = "0.14.0" }
trie-standardmap = { version = "0.14.0" }
keccak-hasher = { version = "0.14.0" }
criterion = "0.2"
itertools = "0.8"
hex-literal = "0.2.0"
kvdb = { git = "https://github.com/paritytech/parity-common", rev="b0317f649ab2c665b7987b8475878fc4d2e1f81d" }
kvdb-rocksdb = { git = "https://github.com/paritytech/parity-common", rev="b0317f649ab2c665b7987b8475878fc4d2e1f81d" }
rand = "0.7"
tempdir = "0.3.7"

[features]
default = ["std"]
std = [
	"rstd/std",
	"codec/std",
	"hash-db/std",
	"memory-db/std",
	"trie-db/std",
	"trie-root/std",
	"substrate-primitives/std",
]
